--- a/Store.Web/Views/Book/Index.cshtml
+++ b/Store.Web/Views/Book/Index.cshtml
@@ -8,4 +8,8 @@
 <p><strong>@Model.Author</strong></p>
 <p>@Model.Description</p>
 <p>Price <strong>@Model.Price</strong></p>
+<form action="@Url.Action("Add", "Cart")" method="post">
+    <input type="hidden" name="id" value="@Model.Id" />
+    <button class="btn btn-outline-success" type="submit">add to Cart</button>
+</form>
 
