--- a/Store.Web/Views/Shared/_Layout.cshtml
+++ b/Store.Web/Views/Shared/_Layout.cshtml
@@ -5,23 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Web Store by C#</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/Store.Web.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/site.css"/>
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-light bg-white">
             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Web Store by C#</a>
             <form class="form-inline my-2 my-lg-0" action="@Url.Action("Index","Search")" method="get">
- 
-                <input class="form-control mr-sm-2" type="search" name="query" placeholder="author or title" />
+                <input class="form-control mr-sm-2" type="search" name="query" placeholder="ISBN, Author or Title" />
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
+            <span class="navbar-text ml-auto">
+                @{
+                    Cart cart;
+                    if(!Context.Session.TryGetCart(out cart))
+                    {
+                        cart = new Cart();
+                    }
+                    if(cart.Items.Count == 0)
+                    {
+                        @:Cart is empty
+                    }
+                    else
+                    {
+                        @:Items @cart.Items.Count Amount @cart.Amount
+                    }
+                }
+            </span>
         </nav>
     </header>
     <div class="container">
         <main>
-            @RenderBody();
+            @RenderBody()
         </main>
     </div>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
