--- a/Store.Web/Views/Book/Index.cshtml
+++ b/Store.Web/Views/Book/Index.cshtml
@@ -9,7 +9,7 @@
 <p>@Model.Description</p>
 <p>Price <strong>@Model.Price</strong></p>
 <form action="@Url.Action("AddItem", "Order")" method="post">
-    <input type="hidden" name="id" value="@Model.Id" />
+    <input type="hidden" name="bookId" value="@Model.Id" />
     <button class="btn btn-success" type="submit">add to Cart</button>
 </form>
 
