--- a/Store.Web/Views/Order/Index.cshtml
+++ b/Store.Web/Views/Order/Index.cshtml
@@ -13,18 +13,25 @@
             <th scope="col">Title</th>
             <th scope="col">Quantity</th>
             <th scope="col">Price</th>
+            <th scope="col"></th>
         </tr>
     </thead>
     <tbody>
         @for (int i = 0; i < Model.Items.Length; i++)
         {
-            <tr>
-                <td class="text-right">@(i + 1)</td>
-                <td>@Model.Items[i].Author</td>
-                <td>@Model.Items[i].Title</td>               
-                <td>@Model.Items[i].Count</td>
-                <td>@Model.Items[i].Price</td>
-            </tr>
+                        <tr>
+                            <td class="text-right">@(i + 1)</td>
+                            <td>@Model.Items[i].Author</td>
+                            <td>@Model.Items[i].Title</td>               
+                            <td>@Model.Items[i].Count</td>
+                            <td>@Model.Items[i].Price</td>
+                            <td class="form-inline">
+                                 <form class="form-inline" action="@Url.Action("RemoveItem", "Order")" method="post">
+                                 <input hidden="bookId" name="bookId" value="@Model.Items[i].BookId">
+                                 <button class="btn btn-danger" type="submit">Delete</button>
+                                 </form>
+                            </td>
+                        </tr>
         }
     </tbody>
     <tfoot>
@@ -32,6 +39,10 @@
             <td colspan="3" class="text-right">Total</td>
             <td class="text-right">@Model.TotalCount</td>
             <td class="text-right">@Model.TotalPrice</td>
+
+
+
+
         </tr>
     </tfoot>
 </table>
