--- a/Store.Web/Views/Shared/_Layout.cshtml
+++ b/Store.Web/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-light bg-white">
             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Web Store by C#</a>
-            <form class="form-inline my-2 my-lg-0" action="@Url.Action("Index","Search")" method="get">
+            <form class=form-check-inline my-2 my-lg-0" action="@Url.Action("Index","Search")" method="get">
                 <input class="form-control mr-sm-2" type="search" name="query" placeholder="ISBN, Author or Title" />
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
