--- a/Store.Web/Views/_ViewImports.cshtml
+++ b/Store.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Store
 @using Store.Web
 @using Store.Web.Models
+@using Store.Contractors
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
