--- a/Store.Web/Views/_ViewImports.cshtml
+++ b/Store.Web/Views/_ViewImports.cshtml
@@ -1,5 +1,8 @@
 ﻿@using Store
 @using Store.Web
+@using Store.Web.App
+@using Store.Web.Models
+@using Store.Web.Controllers
 @using Store.Web.Models
 @using Store.Contractors
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
