--- a/Store.Web/Views/Order/Confirmation.cshtml
+++ b/Store.Web/Views/Order/Confirmation.cshtml
@@ -1,30 +1,41 @@
-﻿@model ConfirmationModel
+﻿@model OrderModel
+
 @{
-    ViewData["Title"] = "Phone Confirmation";
+    ViewData["Title"] = "Подтверждение мобильного";
 }
 
-<h1>Phone Confirmation</h1>
+<h1>Подтверждение мобильного</h1>
 
-<form action="@Url.Action("Confirm")" method="post">
-    <input type="hidden" name="id" value="@Model.OrderId" />
-    <input type="hidden" name="cellphone" value="@Model.CellPhone" />
+<p>
+    Введите <em>код подтверждения</em> из SMS.
+</p>
+
+<form action="@Url.Action(nameof(OrderController.ConfirmCellPhone))" method="post">
+    <input type="hidden" name="cellPhone" value="@Model.CellPhone" />
     <div class="form-group">
-        <label for="code">Confirmation code</label>
-        <input type="text" class="form-control" name="code" placeholder="0000"/>
+        <label for="confirmationCode">Код потдверждения</label>
+        <input type="text" class="form-control" name="confirmationCode" placeholder="0000" />
+        @if (Model.Errors.ContainsKey("confirmationCode"))
+        {
+            <small class="form-text text-danger">@Model.Errors["confirmationCode"]</small>
+        }
     </div>
-    @if (Model.Errors.ContainsKey("code"))
-    {
-        <small class="form-text text-danger">@Model.Errors["code"]</small>
-    }
-    <button type="submit" class="btn btn-success">Check</button>
-
+    <button type="submit" class="btn btn-success">Проверить</button>
 </form>
 
+<p>
+    Если на ваш номер SMS не пришла в течение минуты, проверьте правильность номера и
+    повторите отправку кода.
+</p>
+
 <form action="@Url.Action("SendConfirmationCode")" method="post">
-    <input type="hidden" name="id" value="@Model.OrderId" />
     <div class="form-group">
-        <label for="cellPhone">Cell Phone</label>
+        <label for="cellPhone">Мобильный телефон</label>
         <input type="text" class="form-control" name="cellPhone" value="@Model.CellPhone" />
+        @if (Model.Errors.ContainsKey("cellPhone"))
+        {
+            <small class="form-text text-danger">@Model.Errors["cellPhone"]</small>
+        }
     </div>
-    <button type="submit" class="btn btn-success">Repeat code</button>
+    <button type="submit" class="btn btn-success">Повторить код</button>
 </form>
