--- a/Store.Web/Views/Order/DeliveryMethod.cshtml
+++ b/Store.Web/Views/Order/DeliveryMethod.cshtml
@@ -1,22 +1,19 @@
-﻿@model DeliveryModel
-
+﻿@model IReadOnlyDictionary<string, string>
 @{
-    ViewData["Title"] = "Delivery Method";
+    ViewData["Title"] = "Способ доставки";
 }
 
-<h1>Delivery Method</h1>
+<h1>Способ доставки</h1>
 
-<form action="@Url.Action("StartDelivery")" method="post">
-    <input type="hidden" name="id" value="@Model.OrderId" />
+<form action="@Url.Action(nameof(OrderController.StartDelivery))" method="post">
     <div class="form-group">
-        <label for="code">Delivery Metod:</label>
-        <select class="form-control" name="uniqueCode">
-            @foreach(var method in Model.Methods)
+        <label for="code">Способ доставки:</label>
+        <select class="form-control" name="serviceName">
+            @foreach (var method in Model)
             {
                 <option value="@method.Key">@method.Value</option>
             }
         </select>
     </div>
-    <button type="submit" class="btn btn-success">Next</button>
-
+    <button type="submit" class="btn btn-success">Далее</button>
 </form>
