--- a/Store.Web/Views/Order/DeliveryStep.cshtml
+++ b/Store.Web/Views/Order/DeliveryStep.cshtml
@@ -1,24 +1,21 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@using Store.Web.Controllers
 @model Form
+
 @{
-    ViewData["Title"] = "Delivery Parametres";
+    ViewData["Title"] = "Параметры доставки";
 }
 
-<h1>Delivery Parametres</h1>
-<form action="@Url.Action("NextDelivery")" method="post">
-    <input type="hidden" name="id" value="@Model.OrderId" />
-    <input type="hidden" name="uniqueCode" value="@Model.UniqueCode" />
+<h1>Параметры доставки</h1>
+<form action="@Url.Action(nameof(OrderController.NextDelivery))" method="post">
+    <input type="hidden" name="serviceName" value="@Model.ServiceName" />
     <input type="hidden" name="step" value="@Model.Step" />
+    @foreach (var parameter in Model.Parameters)
+    {
+        <input type="hidden" name="values[@parameter.Key]" value="@parameter.Value" />
+    }
     @foreach (var field in Model.Fields)
     {
-
-        if (field is HiddenField hiddenField)
-        {
-            <input type="hidden" name="values[@field.Name]" value="@field.Value" />
-        }
-        else if (field is SelectionField selectionField)
+        if (field is SelectionField selectionField)
         {
             <div class="form-group">
                 <label for="values[@field.Name]">@field.Label</label>
@@ -31,5 +28,5 @@
             </div>
         }
     }
-    <button type="submit" class="btn btn-success">Next</button>
+    <button type="submit" class="btn btn-success">Далее</button>
 </form>
